[gd_scene load_steps=22 format=3 uid="uid://bft1fic6j0ucw"]

[ext_resource type="Texture2D" uid="uid://b0thjvuaj1cc" path="res://assets/sprites/black_background.png" id="1_0y8gg"]
[ext_resource type="Texture2D" uid="uid://bj0ijo66dkhlf" path="res://assets/sprites/platform1.png" id="2_vvcwp"]
[ext_resource type="Texture2D" uid="uid://bj38kyepoqwtp" path="res://assets/sprites/platform2.png" id="3_dje0g"]
[ext_resource type="Texture2D" uid="uid://d0sdx18croxn7" path="res://assets/sprites/platform3.png" id="4_g7p6o"]
[ext_resource type="Texture2D" uid="uid://b45ksylais1c1" path="res://assets/sprites/platform4.png" id="5_40ga3"]
[ext_resource type="Texture2D" uid="uid://b7as4m1eghgli" path="res://assets/sprites/platform6.png" id="6_ynct0"]
[ext_resource type="Script" uid="uid://b5bfsp64ay6fh" path="res://scripts/entities/lava.gd" id="7_40ga3"]
[ext_resource type="Texture2D" uid="uid://ckidsg3pwynp0" path="res://assets/sprites/platform5.png" id="8_w06h8"]
[ext_resource type="Texture2D" uid="uid://bd1d55gbc8bun" path="res://assets/sprites/lava.png" id="8_ynct0"]
[ext_resource type="Script" uid="uid://ciopo0w5fybtt" path="res://scripts/entities/spawn_point.gd" id="10_morta"]
[ext_resource type="PackedScene" uid="uid://b72cmuhsp6dty" path="res://scenes/entities/player.tscn" id="11_dq8h5"]
[ext_resource type="Script" uid="uid://cb8uooe1yjyuj" path="res://scripts/managers/wave_manager.gd" id="12_imdmy"]
[ext_resource type="Script" uid="uid://8kf6chx1ys8p" path="res://scenes/levels/bouncing_collision.gd" id="12_morta"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imdmy"]
size = Vector2(960, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dq8h5"]
size = Vector2(979, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ioey5"]
size = Vector2(800, 108)

[sub_resource type="CircleShape2D" id="CircleShape2D_imdmy"]
radius = 96.0

[sub_resource type="CircleShape2D" id="CircleShape2D_morta"]
radius = 121.004

[sub_resource type="CircleShape2D" id="CircleShape2D_p7rbk"]
radius = 93.0054

[sub_resource type="CircleShape2D" id="CircleShape2D_l4xu8"]
radius = 109.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7rbk"]
size = Vector2(10, 17)

[node name="Level" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(400, 300)
texture = ExtResource("1_0y8gg")

[node name="Platforms" type="Node2D" parent="."]
position = Vector2(400, 300)

[node name="platform1" type="StaticBody2D" parent="Platforms"]
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Platforms/platform1"]
position = Vector2(1, -131)
texture = ExtResource("2_vvcwp")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/platform1"]
polygon = PackedVector2Array(-130, -154, 133, -154, 128, -141, 90, -124, -31, -109, -62, -110, -100, -126, -127, -127)

[node name="platform2" type="StaticBody2D" parent="Platforms"]
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Platforms/platform2"]
position = Vector2(1, -161)
texture = ExtResource("3_dje0g")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/platform2"]
polygon = PackedVector2Array(294, -175, 306, -148, 321, -152, 433, -150, 433, -175)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Platforms/platform2"]
polygon = PackedVector2Array(-426, -174, -324, -175, -325, -163, -336, -155, -360, -156, -366, -147, -427, -150)

[node name="platform3" type="StaticBody2D" parent="Platforms"]
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Platforms/platform3"]
position = Vector2(0, 25)
texture = ExtResource("4_g7p6o")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/platform3"]
polygon = PackedVector2Array(-432, 12, -238, 12, -240, 25, -249, 32, -271, 28, -286, 33, -338, 32, -374, 35, -432, 37)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Platforms/platform3"]
polygon = PackedVector2Array(309, 11, 431, 11, 430, 30, 349, 30, 325, 37, 314, 28)

[node name="platform4" type="StaticBody2D" parent="Platforms"]
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Platforms/platform4"]
position = Vector2(228, 12)
texture = ExtResource("5_40ga3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/platform4"]
polygon = PackedVector2Array(134, -10, 323, -9, 314, 4, 304, 7, 306, 22, 291, 31, 259, 27, 235, 34, 213, 22, 160, 15, 135, 6)

[node name="platform5" type="StaticBody2D" parent="Platforms"]
position = Vector2(-57, 35)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Platforms/platform5"]
position = Vector2(58, 197)
texture = ExtResource("6_ynct0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/platform5"]
position = Vector2(50, 130)
shape = SubResource("RectangleShape2D_imdmy")

[node name="platform6" type="StaticBody2D" parent="Platforms"]
position = Vector2(-117, 65)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Platforms/platform6"]
position = Vector2(86, -13)
texture = ExtResource("8_w06h8")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms/platform6"]
polygon = PackedVector2Array(1, -31, 169, -30, 173, -23, 169, -18, 101, 5, 63, 4, 5, -19, -2, -25)

[node name="Ceiling" type="StaticBody2D" parent="Platforms"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Ceiling"]
position = Vector2(-23.5, -301.5)
shape = SubResource("RectangleShape2D_dq8h5")

[node name="Lava" type="Area2D" parent="."]
position = Vector2(400, 300)
script = ExtResource("7_40ga3")

[node name="Sprite2D" type="Sprite2D" parent="Lava"]
z_index = -3
position = Vector2(0, 245.25)
scale = Vector2(1, 0.728188)
texture = ExtResource("8_ynct0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lava"]
position = Vector2(0, 245)
shape = SubResource("RectangleShape2D_ioey5")

[node name="SpawnPoints" type="Node2D" parent="."]
position = Vector2(400, 300)

[node name="SpawnPoint1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-323, 5)
script = ExtResource("10_morta")

[node name="PlayerDetectionZone" type="Area2D" parent="SpawnPoints/SpawnPoint1"]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SpawnPoint1/PlayerDetectionZone"]
position = Vector2(-1, -27)
shape = SubResource("CircleShape2D_imdmy")

[node name="SpawnPoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-2, 150)
script = ExtResource("10_morta")

[node name="PlayerDetectionZone" type="Area2D" parent="SpawnPoints/SpawnPoint2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SpawnPoint2/PlayerDetectionZone"]
shape = SubResource("CircleShape2D_morta")

[node name="SpawnPoint3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(236, -21)
script = ExtResource("10_morta")

[node name="PlayerDetectionZone" type="Area2D" parent="SpawnPoints/SpawnPoint3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SpawnPoint3/PlayerDetectionZone"]
position = Vector2(-1, -27)
shape = SubResource("CircleShape2D_p7rbk")

[node name="SpawnPoint4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-8, -162)
script = ExtResource("10_morta")

[node name="PlayerDetectionZone" type="Area2D" parent="SpawnPoints/SpawnPoint4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SpawnPoint4/PlayerDetectionZone"]
position = Vector2(-3, -23)
shape = SubResource("CircleShape2D_l4xu8")

[node name="Player" parent="." instance=ExtResource("11_dq8h5")]
position = Vector2(205, 425)

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("12_imdmy")

[node name="BouncingCollision" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("12_morta")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BouncingCollision"]
position = Vector2(728, 301)
shape = SubResource("RectangleShape2D_p7rbk")

[node name="EggSpawnPoints" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(32, 301)

[node name="Marker2D2" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(465, 449)

[node name="Marker2D3" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(240, 450)

[node name="Marker2D4" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(148, 301)

[node name="Marker2D5" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(446, 134)

[node name="Marker2D6" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(650, 450)

[node name="Marker2D7" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(545, 446)

[node name="Marker2D8" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(302, 450)

[node name="Marker2D9" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(140, 449)

[node name="Marker2D10" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(368, 321)

[node name="Marker2D11" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(771, 301)

[node name="Marker2D12" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(684, 281)

[node name="Marker2D13" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(609, 280)

[node name="Marker2D14" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(557, 278)

[node name="Marker2D15" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(437, 324)

[node name="Marker2D16" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(305, 326)

[node name="Marker2D17" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(782, 117)

[node name="Marker2D18" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(723, 117)

[node name="Marker2D19" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(499, 135)

[node name="Marker2D20" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(12, 116)

[node name="Marker2D21" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(60, 113)

[node name="Marker2D22" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(352, 136)

[node name="Marker2D23" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(115, 302)

[node name="Marker2D24" type="Marker2D" parent="EggSpawnPoints"]
position = Vector2(290, 135)
